测试贪吃蛇中inerHTML属性的使用

--- a/JS基础/测试贪吃蛇中遇到的innerHTML属性的使用.html
+++ b/JS基础/测试贪吃蛇中遇到的innerHTML属性的使用.html
@@ -16,7 +16,8 @@
     <script>
 
         var oBox=document.getElementById("box");
-        oBox.innerHTML="100";
+        var grade=0;
+        oBox.innerHTML=++grade;
     </script>
 </body>
 </html>
