--- a/JS基础/贪吃蛇小项目/index.html
+++ b/JS基础/贪吃蛇小项目/index.html
@@ -72,7 +72,12 @@
             height: 20px;
             float: left;
         }
-
+        .egg{
+            background: red;
+            width: 20px;
+            height: 20px;
+            float: left;
+        }
     </style>
 </head>
 <body>
@@ -136,14 +141,14 @@
             }
             snakeDivPosition.push(rowArray);
         }
-        // console.log(snakeDivPosition);
+
 
         //创建蛇模型部分
         //定义一个变量存储蛇的起始长度
         var snakeLength=3;
         //定义蛇头的起始位置偏移量(注意是从0开始的)
-        var x_snake=2;
-        var y_snake=0;
+        var x_snake=0;
+        var y_snake=2;
 
         //定义一个一维数组用来存储蛇身的每一个小div
         var snakeArray=[];
@@ -160,22 +165,28 @@
         //添加键盘监听事件用来改变🐍 的移动方向
         //定义一个direction变量用来记录🐍具体要移动的方向
         var direction="right";
+        //var changeDir = true;// 判断是否需要改变蛇的移动方向
+        //var delayTimer = null;// 延迟定时器
 
         document.onkeydown=function(e){
-            var e =e||window.event;
-            if(direction=="top"&&e.keyCode==38){
+            // 先判断是否需要改变方向,true表示需要,false表示不需要
+            //if (!changeDir) {
+            //    return;// return空表示直接结束函数,后续代码不执行
+            //}
+            var e1 =e||window.event;
+            if(direction=="top"&&e1.keyCode==38){
                 return;
             }
-            if(direction=="bottom"&&e.keyCode==40){
+            if(direction=="bottom"&&e1.keyCode==40){
                 return;
             }
-            if(direction=="left"&&e.keyCode==37){
+            if(direction=="left"&&e1.keyCode==37){
                 return;
             }
-            if(direction=="right"&&e.keyCode==39){
+            if(direction=="right"&&e1.keyCode==39){
                 return;
             }
-            switch(e.keyCode){
+            switch(e1.keyCode){
                 case 38:
                     direction="top"; 
                     return;
@@ -189,6 +200,11 @@
                     direction="right";
                     return;
             }
+            //changeDir = false;
+            //delayTimer = setTimeout(function() {
+                // 设置是否需要改变方向
+            //    changeDir = true;
+            //}, 300);
         }
 
         //设置🐍的移动逻辑的函数
@@ -196,31 +212,33 @@
             //通过direction去判断🐍要移动的方向，从而改变🐍头的偏移量
             switch(direction){
                 case "right":
-                    x_snake++;
+                    y_snake++;
                     break;
                 case "left":
-                    x_snake--;
-                    break;
-                case "top":
                     y_snake--;
                     break;
+                case "top":
+                    x_snake--;
+                    break;
                 case "bottom":
-                    y_snake++;
+                    x_snake++;
                     break;
             }
             //判断🐍头是否越界
             if(x_snake==-1||x_snake==rowNumber||y_snake==-1||y_snake==columnNumber){
-                alert("很遗憾，您失败了！");
+                alert("很遗憾，您失败了！越界");
                 //此处要清除定时器并结束程序
-
-
+                clearInterval(moveTimer);
+                return;
             }
 
             //如果🐍吃到自己也要结束游戏，判断是否吃到自己
-            for(var i=0; i<snakeLength; ++i){
+            for(var i=0; i<snakeArray.length; ++i){
                 if(snakeArray[i]==snakeDivPosition[x_snake][y_snake]){
-                    alert("很遗憾，您失败了！");
+                    alert("很遗憾，您失败了！吃到自己");
                     //此处要清除定时器并结束程序
+                    clearInterval(moveTimer);
+                    return;
                 }
             }
 
@@ -235,28 +253,58 @@
                 //吃到🥚后使分数加一
                 oGrade.innerHTML=++grade;
 
-                //然后再随机产生一个🥚
-                //此处调用产生🥚的函数************************************
+                //然后再随机产生一个🥚,继续进行游戏
+                createNewEgg();
+                console.log("吃到蛋了");//碰到蛋了但是没打印
 
 
             }else{
                 //在组成🐍的数组(snakeArray)中的尾部添加一个元素
                 snakeDivPosition[x_snake][y_snake].className="active";
-                //在存放🐍的元素的数组的尾部添加一个元素（这个位置有🥚）
+                //在存放🐍的元素的数组的尾部添加一个元素
                 snakeArray.push(snakeDivPosition[x_snake][y_snake]);    
 
                 //没有吃到🥚，把存放🐍的数组的第一个元素的样式设为默认样式，并且从数组中删除
                 snakeArray[0].className="default";
                 snakeArray.shift();
+                console.log("x_egg:"+x_egg+"y_egg:"+y_egg);
             }
         }
 
+
+        //定义一个定时器，使🐍移动的函数在一定间隔的时间内不断执行
+        var moveTimer=setInterval(function(){
+            console.log(direction);
+            console.log(x_snake,y_snake);
+            snakeMove();
+            
+        },2000);
+
         //定义x_egg和y_egg两个变量来记录蛋的位置
-        var x_egg;
-        var y_egg;
+        var x_egg=0;
+        var y_egg=0;
+
+        //初始产生的🥚,注意调用这个函数的位置，在上面的变量定义之后
+        createNewEgg();
+
         //定义一个产生0---columnNumber和0---rowNmuber之间的随机数的函数
         function random(min,max){
-            return math.floor(math.random()*(max-min))+min;
+            return Math.floor(Math.random()*(max-min))+min;
+        }
+
+        function createNewEgg(){
+            //随机产生🥚的位置
+            x_egg=random(0,25);
+            y_egg=random(0,25);
+
+            //使用循环来判断鸡蛋是否和当前的🐍身重合,若重合在生成一个🥚
+            for(var i=0; i<snakeArray.length; ++i){
+                if(snakeDivPosition[x_egg][y_egg]==snakeArray[i]){
+                    createNewEgg();
+                }
+            }
+            //是当前🥚的样式进行改变
+            snakeDivPosition[x_egg][y_egg].className="egg"
         }
 
 
