更改了放大镜中使用的照片路径

--- a/JS基础/放大镜.html
+++ b/JS基础/放大镜.html
@@ -47,11 +47,11 @@
 <body>
     <div id="container">
         <div class="small-img" id="small-img">
-            <img src="./img/1.jpg" alt="">
+            <img src="./img/one.jpg" alt="">
             <div id="box"></div>
         </div>
         <div class="big-img" id="big-img">
-            <img src="./img/2.jpg" alt="" id="img">
+            <img src="./img/two.jpg" alt="" id="img">
         </div>
     </div>
     <script>
