--- a/JS基础/贪吃蛇小项目/index.html
+++ b/JS基础/贪吃蛇小项目/index.html
@@ -216,6 +216,19 @@
         document.onkeydown=function(e){
 
             var e1 =e||window.event;
+            if(direction=="top"&&e1.keyCode==40){
+                return;
+            }
+            if(direction=="left"&&e1.keyCode==39){
+                return;
+            }
+            if(direction=="bottom"&&e1.keyCode==38){
+                return;
+            }
+            if(direction=="right"&&e1.keyCode==37){
+                return;
+            }
+
             if(direction=="top"&&e1.keyCode==38){
                 return;
             }
@@ -413,7 +426,7 @@
             }
         }
 
-
+ 
 
     </script>
 </body>
