解决了贪吃蛇项目中按下开始按钮，再按下暂停按钮会继续运行的问题

--- a/JS基础/贪吃蛇小项目/index.html
+++ b/JS基础/贪吃蛇小项目/index.html
@@ -402,6 +402,7 @@
         }
 
         //开始暂停/继续功能按钮的制作
+        //在程序是运行的前提下，定义isPause变量用来记录当前程序是否处于暂停还是继续状态
         var isPause=false;
         oPause.onclick=function(){
             if(isStart){
