--- a/JS基础/判断是数组还是对象的方法.html
+++ b/JS基础/判断是数组还是对象的方法.html
@@ -27,13 +27,15 @@
         // console.log(typeof arr); //返回的是Object
         // console.log(typeof obj); //返回的是Object
 
-        console.log("判断是不是数组1: "+Array.isArray(arr));
+        // console.log("判断是不是数组1: "+Array.isArray(arr));
 
         //返回的是实例化该对象的构造函数
-        console.log("判断是不是数组2： "+arr.constructor);
+        // console.log("判断是不是数组2： "+arr.constructor);
         
-        console.log(arr instanceof Array);//返回true 说明arr是Array的一个实例化对象
-
+        // console.log(arr instanceof Array);//返回true 说明arr是Array的一个实例化对象
+        
+        console.log(obj.constructor);
+        console.log(obj instanceof Object);
     </script>
 </body>
 </html>
