--- a/JS基础/对象的构造与使用.html
+++ b/JS基础/对象的构造与使用.html
@@ -26,6 +26,8 @@
             this.age=age;
         }
         //声明在原型下面的属性和方法可以被所有的实例化对象所共享
+        //并且这些属性和方法只有一次声明，所有的实例化对象都用这些属性和方法
+        
         Person1.prototype.sleep=function(){
             console.log("sleep");
         }
