对象的构造与使用

--- a/JS基础/对象的构造与使用.html
+++ b/JS基础/对象的构造与使用.html
@@ -28,6 +28,7 @@
         //声明在原型下面的属性和方法可以被所有的实例化对象所共享
         //并且这些属性和方法只有一次声明，所有的实例化对象都用这些属性和方法
         
+        // 原型链： 当访问一个对象的属性和方法的时候，会到原型上面去寻找
         Person1.prototype.sleep=function(){
             console.log("sleep");
         }
