media-queryde'测试

--- a/移动端/media-query测试.html
+++ b/移动端/media-query测试.html
@@ -15,7 +15,7 @@
             height: 300px;
             background: #0f0;
         }
-        /* 注意@media后的参数用空格隔开 */
+        /* 注意@media后的参数用空格隔开, 如果上面有样式的话，可以不重复书写 */
         @media screen and (max-width: 768px){
             #box{
                 background: #f00;
